# mcpsquared-base

./: README.md  chain_selection_mcp_server.py  pyproject.toml  setup.py
.github/workflows/: public_release.yml
configs/agents/: chain_selector_agent.json
mcpsquared_base/: __init__.py  base_mcpsquared_agent.py  base_orchestrator.py  chain_selection_mcp_server.py
mcpsquared_base.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcpsquared_base/configs/agents/: mcpsquared_executor_agent.json
mcpsquared_base/configs/workflows/: chain_selector_workflow.json  mcpsquared_executor_workflow.json
mcpsquared_base/utils/: __init__.py  agent_loader.py  agent_runner.py  workflow_runner.py
models/: __init__.py  requests.py  schemas.py
tools/: __init__.py  chain_selection.py
utils/: workflow_runner.py
