[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpsquared-base"
version = "0.1.2"
description = "Base package for MCPSquared - provides universal loaders/runners and chain selection MCP server"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp-use",
    "langchain-openai",
    "fastmcp",
]

[project.scripts]
chain-selection-mcp-server = "mcpsquared_base.chain_selection_mcp_server:main"

[project.urls]
Homepage = "https://github.com/sancovp/mcpsquared-base"
Repository = "https://github.com/sancovp/mcpsquared-base.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcpsquared_base*"]